# metabric-sd

./: README.md  metabric_db_preparation.ows  pyproject.toml
analysis_results/: README.md
analysis_results/cn2-sd_results/: cn2-sd_top_p_and_top_n.txt
analysis_results/esmam-sd_results/: esmam-sd_top_p_and_top_n.txt  esmam_genes_only_results.txt
analysis_results/ssdp_results/: ssdp_genes_only_results.txt  ssdp_top_p_and_top_n.txt
breast_cancer_wisconsin/: read_metabrick.py
cn2-sd_results/analysis/: cn2-sd_top_p_and_top_n.txt
load_database/: README.md
metabrick_sd/load_database/: README.md
metabrick_sd/preprocess_database/: README.md  process_metabrick.py
metabrick_sd/results_analysis/: README.md  filter_genes.py  genes_dataset_p.csv  survival_analysis.py
metabrick_sd/results_analysis/coax_regression_analysis/: build_subgroup_representation.py  coax_regression_analysis.ows
metabrick_sd/results_analysis/geneset_analysis/: filter_genes.py  geneset_survival.ows
metabrick_sd/results_analysis/kaplan_meier/: survival_analysis.py
results_analysis/geneset_analysis/: genes_dataset.csv
results_analysis/kaplan_meier/: survival_analysis.py
ssdp_results/: ssdp_clinical_plus_genes_results.txt  ssdp_clinical_plus_genes_results_noPAM50.txt  ssdp_genes_only_rank_results.txt  ssdp_genes_only_results.txt  ssdp_genes_only_results_noPAM50.txt  ssdp_survival_event_n.txt  ssdp_survival_event_p.txt
ssdp_results/analysis/: clinical_plus_genes.txt  genes_only.txt
