[tool.poetry]
name = "breast-cancer-wisconsin"
version = "0.1.0"
description = "Subgroup discovery on a brest cancer dataset"
authors = ["Nagi0 <brunolefonseca13@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.9"
orange3 = "*"
ucimlrepo = "*"
pysubgroup = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
