[tool.poetry]
name = "metabrick_sd"
version = "0.1.0"
description = "Subgroup discovery on a brest cancer dataset"
authors = ["Nagi0 <brunolefonseca13@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.9"
orange3 = "*"
ucimlrepo = "*"
tqdm = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
